# cshl-qb-course

./: .gitignore  LICENSE  README.md  behavior-and-ephys.ipynb  environment.yaml  myomatrix-chew.ipynb  pyproject.toml
projectlib/: anatomy.py  utils.py
